--- a/jnl8/main.css
+++ b/jnl8/main.css
@@ -29,15 +29,18 @@ img {
 h1 {
   font-style: italic;
   font-size: 40px;
+  padding-left: 10px;
 }
 
 h2 {
   font-size: 24px;
   margin-bottom: 1.5rem;
+  padding-left: 10px;
 }
 
 p {
   font-size: 20px;
+  padding-left: 15px;
 }
 
 .otherimg {
