--- a/jnl8/main.css
+++ b/jnl8/main.css
@@ -16,7 +16,7 @@ header {
 }
 
 img {
-  width: 100%;
+  width: 80%;
 }
 
 .caption {
@@ -30,17 +30,20 @@ h1 {
   font-style: italic;
   font-size: 40px;
   padding-left: 10px;
+  padding-right: 10px;
 }
 
 h2 {
   font-size: 24px;
   margin-bottom: 1.5rem;
   padding-left: 10px;
+  padding-right: 10px;
 }
 
 p {
   font-size: 20px;
   padding-left: 15px;
+  padding-right: 15px;
 }
 
 .otherimg {
