--- a/jnl8/main.css
+++ b/jnl8/main.css
@@ -16,6 +16,8 @@ header {
 }
 
 img {
+ margin-right: 15px;
+ margin-left: 15px;
   width: 80%;
 }
 
@@ -31,6 +33,8 @@ h1 {
   font-size: 40px;
   padding-left: 10px;
   padding-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 h2 {
@@ -38,12 +42,16 @@ h2 {
   margin-bottom: 1.5rem;
   padding-left: 10px;
   padding-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 p {
   font-size: 20px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .otherimg {
