--- a/jnlFinal/main.css
+++ b/jnlFinal/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, sans-serif;
+  background-color:#697794;
   max-width: 70rem;
   margin-left: auto;
   margin-right: auto;
@@ -27,6 +28,7 @@ img {
 }
 
 .caption {
+  background-color:#697794;
   font-size: 14px;
   margin-left: 10px;
   margin-right: 10px;
@@ -66,6 +68,7 @@ p {
 }
 
 .otherimg {
+  background-color:#697794;
   max-width: 50rem;
   margin-left: auto;
   margin-right: auto;
